crates/ferrum-interfaces/tests/ui/vnext/fail/trusted_plan_runtime_binding_cannot_be_constructed.rs
use ferrum_interfaces::vnext::{
    DeviceRuntime, PlanRuntimeResources, TrustedPlanRuntimeBinding,
};
use std::sync::Arc;

fn construct<R: DeviceRuntime>(
    resources: Arc<PlanRuntimeResources<R>>,
) -> TrustedPlanRuntimeBinding<R> {
    TrustedPlanRuntimeBinding { resources }
}

fn main() {}
